Fixed lesson title spacing

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -115,7 +115,7 @@ body {
 #show-lesson-title {
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
+  width: 75%;
   text-align: center;
   font-size: 50px;
 }
